@startuml

class TodoListApp {
    + main(args)
    + start(primaryStage)
}

class Task {
    - description: String
    - dueDate: String
    - isFinished: boolean
    - isFinishedString: String

    + Task()
    + Task(description, dueDate, isFinished)
    + getDescription()
    + setDescription(description)
    + getDueDate()
    + setDueDate(dueDate)
    + getIsFinished()
    + setIsFinished(Finished)
    + getIsFinishedString()
    + setIsFinishedString(isFinished)
    + toString()
}

class TaskController {
    - taskList: ObservableList<Task>
    - tableView: TableView<Task>
    - descriptionColumn: TableColumn<Task, String>
    - dueDateColumn: TableColumn<Task, String>
    - finishedColumn: TableColumn<Task, Boolean>

    + initialize(location, resources)
    + initializeTaskList()
    + addTaskToList(task)
    + removeTaskFromList(task)
    + getTaskList()
    + modifyTaskFromList(oldTask, modifiedTask)
    + importPressed(event)
    + exportPressed(event)
    + displayAllPressed(event)
    + getAllTasks()
    + displayIncompletePressed(event)
    + getIncompleteTasks()
    + displayCompletePressed(event)
    + getCompletedTasks()
    + updateTable(event)
    + resetMenuItemPressed(event)
    + addItemButtonPressed(event)
    + modifyItemButtonPressed(event)
    + deleteItemButtonPressed(event)
    + deleteAllItemsButtonPressed(event)
    + deleteAllTasks()
    + switchToAddItemScene(event)
}

class AddItemController {
    - task: Task
    - hasValidDescription: boolean
    - hasDueDateSelected: boolean
    - hasFinishedSelected: boolean
    - descriptionTextArea: TextArea
    - dueDatePicker: DatePicker
    - finishedComboBox: ComboBox<String>

    + initialize(location, resources)
    + initializeTaskDescription()
    + hasValidDescriptionLength()
    + meetsRequirements()
    + dueDatePickerPressed(event)
    + finishedComboBoxPressed(event)
    + createButtonPressed(event)
    + cancelButtonPressed(event)
}

class ModifyItemController {
    - modifiedTask: Task
    - oldTask: Task
    - hasValidDescription: boolean
    - descriptionTextArea: TextArea
    - dueDatePicker: DatePicker
    - finishedComboBox: ComboBox<String>

    + initialize(location, resources)
    + setTask(taskToModify)
    + getModifiedTask()
    + initializeTaskDescription(description)
    + hasValidDescriptionLength(description)
    + meetsRequirements()
    + dueDatePickerPressed(event)
    + finishedComboBoxPressed(event)
    + modifyButtonPressed(event)
    + cancelButtonPressed(event)
}

class DateHandler {
    - localDate: LocalDate

    + DateHandler()
    + DateHandler(localDate)
    + getLocalDate()
    + setLocalDate(localDate)
    + getFormattedDate(year, month, day)
    + getFormattedValue(value)
}

class SceneHandler {
    + switchToScene(event, fxmlFile)
}

class FileHandler {
    + importFromJSON(tableView)
    + getTasksFromJSONFile(file)
    + exportToJSON(list)
    + getJSONString(taskList)
}

javafx.Application <|-- TodoListApp
TodoListApp -- TaskController
Task - TaskController

AddItemController -- TaskController
ModifyItemController -- TaskController

TaskController -- FileHandler
TaskController - SceneHandler
SceneHandler - AddItemController
ModifyItemController - SceneHandler

AddItemController - DateHandler
ModifyItemController - DateHandler

@enduml